Revision history for Pod-Weaver

{{$NEXT}}

4.013     2016-04-24 23:19:14+01:00 Europe/London
        - use text for PPI, not octet

4.012     2015-05-05 21:01:33-04:00 America/New_York
        - avoid breaking up words when wrapping text in [Bugs]

4.011     2015-03-17 07:48:54-04:00 America/New_York
        - add "header" attributes to more sections, to change the =head1
          headert ext (thanks, David Wheeler)

4.010     2014-12-30 22:02:58-05:00 America/New_York
        - use of Moose::Autobox has been dropped (thanks Karen Etheridge!)

4.009     2014-12-02 23:00:37-05:00 America/New_York
        - when a Collect-worthy header exists (like =head1 METHODS) use it,
          rather than making a new one *and* leaving the old one around
          (thanks, Christian Walde)

4.008     2014-11-12 09:37:13-05:00 America/New_York
        - handle UTF-8 data in PODNAME and ABSTRACT (thanks,  Blabos de Blebe)
        - Explain Section::Region naming, nonpod, and flattening
          (thanks, Kent Fredric)

4.007     2014-10-27 22:21:55-04:00 America/New_York
        - immutabilize ALL THE THINGS!

4.006     2014-01-07 20:12:37-05:00 America/New_York
        - update tests to pass octets to ->read_string, as is proper

4.005     2013-12-21 15:01:46-0500 America/New_York
        - updated tests for the new (fixed, consistent) string behavior in
          Mixin::Linewise

4.004     2013-11-05 21:50:13 America/New_York
        - allow multi-line formats for VERSION plugin (thanks, Alex Peters)
        - ...including the %T-prefix for lines only included in
          trial releases
        - look for PODNAME more consistently (thanks, Chris Weyl)
        - put license filename in F<> formatting (thanks, Alex Peters)

4.003     2013-11-02 22:58:43 America/New_York
        - note that [@Default] contains [-SingleEncoding] (thanks, Caleb
          Cushing)

4.002     2013-11-02 11:37:04 America/New_York
        [ THIS MIGHT BREAK YOUR CODE ]